# listing_people_api_actix

./: .gitignore  Cargo.toml  README.md
src/: db.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs
src/endpoints/: graphql.rs  mod.rs  routes.rs
src/endpoints/people/: handlers.rs  messages.rs  structs.rs
src/enpoints/: routes.rs
src/enpoints/people/: handlers.rs  messages.rs  mod.rs  model.rs  routes.rs  structs.rs
src/middlewares/: logger.rs
src/tests/: people_test.rs
tests/: people_test.rs
