[package]
name = "listing_people_api_actix"
version = "0.1.0"
authors = ["spieljs <spieljs@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7.14"
diesel = { version = "1.3.3", features = ["postgres"] }
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
dotenv = "0.13.0"
uuid = { version = "0.7.1", features = ["serde", "v4"] }
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
futures = "0.1"
ring = ">= 0.13.0, < 0.13.1" 
env_logger = "0.6"
